<resources>
    <string name="app_name">Talleres</string>
    <string name="version">1.1</string>
    <string name="titulo_informacion_correria_mayuscula">INFORMACIÓN CORRERÍA</string>
    <string name="titulo_correria_mayuscula">CORRERÍA</string>
    <string name="titulo_fecha">Fecha</string>
    <string name="titulo_identificacion">Identificación</string>
    <string name="titulo_correria">Correría</string>
    <string name="titulo_contraseña">Clave</string>
    <string name="titulo_numero_orden">Número Orden</string>
    <string name="titulo_numero_orden_requerido">Número Orden *</string>
    <string name="titulo_nombre">Nombre</string>
    <string name="titulo_direccion">Dirección</string>
    <string name="titulo_codigo">Código</string>
    <string name="titulo_codigo_requerido">Código</string>
    <string name="titulo_llave_alterna">Llave Alterna</string>
    <string name="titulo_aceptar_mayuscula">ACEPTAR</string>
    <string name="titulo_guardar_mayuscula">GUARDAR</string>
    <string name="titulo_enviar_mayuscula">ENVIAR</string>
    <string name="titulo_aplicar_mayuscula">APLICAR</string>
    <string name="titulo_imprimir">Imprimir</string>
    <string name="titulo_cerrar_mayuscula">CERRAR</string>
    <string name="titulo_iniciar_sesion_mayuscula">INICIAR SESIÓN</string>
    <string name="titulo_administracion">Administración</string>
    <string name="titulo_administracion_usuario">Administración Usuarios</string>
    <string name="titulo_administracion_corerria">Administración Correrías</string>
    <string name="titulo_carga">Carga</string>
    <string name="titulo_terminal">Terminal</string>
    <string name="titulo_usuario">Usuario</string>
    <string name="titulo_advertecia">Advertencia</string>
    <string name="titulo_codigo_barras_con_dos_puntos">Código de Barras : </string>
    <string name="titulo_modelo">Modelo </string>
    <string name="titulo_marca">Marca </string>
    <string name="titulo_serie_con_dos_puntos">Serie :</string>
    <string name="titulo_labor_elemento_lectura">Labor Elemento Lectura</string>
    <string name="titulo_grid_elementos">Elementos</string>
    <string name="titulo_lista_elementos_mayuscula">LISTA ELEMENTOS</string>
    <string name="titulo_tareas">Tareas</string>
    <string name="titulo_ordenes_trabajo">Ordenes Trabajo</string>
    <string name="titulo_descripcion_tarea">Descripción Tarea</string>
    <string name="titulo_valor">Valor</string>
    <string name="titulo_secuencia">Secuencia</string>
    <string name="titulo_orden_trabajo_mayuscula">ORDEN DE TRABAJO</string>
    <string name="titulo_elementos">Elementos</string>
    <string name="titulo_iniciar">Iniciar</string>
    <string name="titulo_nueva_ot">Nueva OT</string>
    <string name="titulo_nueva_tarea">NUEVA TAREA</string>
    <string name="titulo_totales">TOTALES</string>
    <string name="titulo_totales_mayuscula">TOTALES</string>
    <string name="titulo_buscar_mayuscula">BUSCAR</string>
    <string name="titulo_estado_lectura">Estado Lectura</string>
    <string name="titulo_seleccion">Selección</string>
    <string name="titulo_estado_tarea">Estado Tarea</string>
    <string name="titulo_tarea">Tarea</string>
    <string name="titulo_titulo_busqueda">BÚSQUEDA</string>
    <string name="titulo_todas">Todas</string>
    <string name="titulo_no_descargadas">No Descargadas</string>
    <string name="titulo_seleccione_una_tarea">Seleccione una tarea</string>
    <string name="titulo_cliente">Cliente</string>
    <string name="titulo_labor_elemento_revision_mayuscula">LABOR ELEMENTO REVISIÓN</string>
    <string name="titulo_historico_mayuscula">HISTÓRICO</string>
    <string name="titulo_nombre_revision">Nombre revisión</string>
    <string name="titulo_total">Total</string>
    <string name="titulo_total_con_puntos">Total :</string>
    <string name="titulo_seleccione_causa_no_lectura">Seleccione causa no Lectura</string>
    <string name="titulo_cambiar_correria">Cambiar correría</string>
    <string name="titulo_cerrar_sesion">Cerrar Sesión</string>
    <string name="titulo_digite_nueva_clave">Digite</string>
    <string name="titulo_confirme_la_nueva_clave">Confirme</string>
    <string name="titulo_contraseña_mayuscula">CONTRASEÑA</string>
    <string name="titulo_su_contraseña_ha_expirado_proceda_a_su_cambio">Su CONTRASEÑA ha expirado , proceda a su cambio</string>
    <string name="titulo_labor_mayuscula">LABOR</string>
    <string name="titulo_aforo_mayuscula">AFORO</string>
    <string name="titulo_material_mayuscula">MATERIAL</string>
    <string name="titulo_nuevo_mayuscula">NUEVO</string>
    <string name="titulo_nuevo_material_mayuscula">NUEVO MATERIAL</string>
    <string name="titulo_nuevo_aforo_mayuscula">NUEVO AFORO</string>
    <string name="titulo_detalle_historia_elemento_mayuscula">DETALLE HISTORIA ELEMENTO</string>
    <string name="titulo_observacion">Observación</string>
    <string name="titulo_nuevo">Nuevo</string>
    <string name="titulo_nueva_orden_trabajo_mayuscula">NUEVA ORDEN TRABAJO</string>
    <string name="titulo_nuevo_elemento">Nuevo Elemento</string>
    <string name="titulo_cuenta">Cuenta</string>
    <string name="titulo_telefono">Teléfono</string>
    <string name="titulo_circuito">Circuito</string>
    <string name="titulo_nodo">Nodo</string>
    <string name="titulo_transformador">Transformador</string>
    <string name="titulo_serie">Serie  </string>
    <string name="titulo_codigo_barras">Código de Barras  </string>
    <string name="titulo_gps_mayuscula">GPS</string>
    <string name="titulo_medida">Medida</string>
    <string name="titulo_factor">Factor</string>
    <string name="titulo_nuevo_labor_aforo">Nuevo Labor Aforo</string>
    <string-array name="lista_seleccion">
        <item>PENDIENTE POR DEFINIR</item>
    </string-array>
    <string-array name="lista_tipo_calculo_aforo">
        <item>Monofásico o Bifásico</item>
        <item>Trifásico</item>
    </string-array>
    <string name="titulo_salir_mayuscula">SALIR</string>
    <string name="titulo_labor_notificacion">Labor Notificación</string>
    <string name="titulo_voltios">Voltios</string>
    <string name="titulo_amperios">Amperios</string>
    <string name="titulo_watios">Watios</string>
    <string name="titulo_siguiente_mayuscula">SIGUIENTE</string>
    <string name="titulo_anterior_mayuscula">ANTERIOR</string>
    <string name="titulo_elementos_relacionados">Elementos Relacionados</string>
    <string name="titulo_buscar_elemento">Buscar elemento</string>
    <string name="mensaje_no_se_logro_guardar_aforo">No se logro guardar el aforo, por favor intente de nuevo</string>
    <string name="mensaje_campo_cantidad_requerido">El campo cantidad es requerido</string>
    <string name="mensaje_campo_cantidad_debe_ser_superior_a_cero">La cantidad debe ser superior a 0</string>
    <string name="mensaje_campo_capacidad_requerido">El campo capacidad es requerido</string>
    <string name="mensaje_campo_capacidad_debe_ser_superior_a_cero">La capacidad debe ser superior a 0</string>
    <string name="mensaje_debe_seleccionar_elemento_de_lista">debe seleccionar un elemento de la lista</string>
    <string name="mensaje_debe_seleccionar_un_material_de_lista">debe seleccionar un material de la lista</string>
    <string name="mensaje_el_valor_unitario_no_puede_ser_cero">el valor unitario no puede ser cero</string>
    <string name="mensaje_el_campo_meses_es_obligatorio">El campo meses es obligatorio</string>
    <string name="mensaje_hora_uso_debe_ser_entre_0_24">La hora de uso debe ser entre 0 y 24</string>
    <string name="mensaje_horas_uso_valor_entre_0_24">Horas uso valor entre 0 y 24</string>
    <string name="mensaje_valor_entre_0_y_99999">valor entre 0 y 99999</string>
    <string name="mensaje_valor_entre_0_y_999">valor entre 0 y 999</string>
    <string name="mensaje_seleccione_un_tipo_de_uso">Tipo de uso</string>
    <string name="titulo_si">Si</string>
    <string name="titulo_no">No</string>
    <string name="titulo_unidad_con_puntos">Unidad :</string>
    <string name="titulo_valor_unitario_con_puntos">Valor Unitario :</string>
    <string name="titulo_base_impuesto_con_puntos">Base Impuesto :</string>
    <string name="titulo_iva_con_puntos">Iva :</string>
    <string name="titulo_cobrar">Cobrar </string>
    <string name="mensaje_elemento_eliminado">Elemento eliminado</string>
    <string name="mensaje_cargando_datos">Cargando datos...</string>
    <string name="mensaje_elemento_guardado">Elemento guardado</string>
    <string name="mensaje_meses_financiacion_debe_ser_menor_igual_que">El campo meses de financiación debe ser menor o igual que el del </string>
    <string name="titulo_cantidad">Cantidad</string>
    <string name="titulo_total_ordenes_trabajo">Total ordenes de trabajo</string>
    <string name="titulo_cambios_elemento">Info elemento</string>
    <string name="titulo_cambios_medida">Info medida</string>
    <string name="titulo_localizacion_actual">Localización actual</string>
    <string name="titulo_nuevo_localizacion">Nueva localización</string>
    <string name="titulo_no_hay_gps_activo">Geolocalización</string>
    <string name="mensaje_no_hay_gps_activo">No se pudo obtener las coordenadas, verifique que tenga el GPS activado</string>
    <string name="mensaje_la_localizacion_gps_almacenada">La localización GPS ha sido almacenada.</string>
    <string name="mensaje_no_almacenamiento_gps">No se puedo almacenar la localización GPS, inténtelo de nuevo.</string>
    <string name="titulo_tareas_mayuscula">TAREAS</string>
    <string name="titulo_ordenes_trabajo_mayusculas">ORDENES DE TRABAJO</string>
    <string name="titulo_cambio_de_correria_mayuscula">CAMBIO DE CORRERIA</string>
    <string name="titulo_mapa_mayuscula">MAPA</string>
    <string name="titulo_informacion_orden_trabajo">Información Orden Trabajo</string>
    <string name="titulo_prueba">Prueba</string>
    <string name="titulo_prueba_pct">Prueba PCT</string>
    <string name="titulo_calcular_mayuscula">CALCULAR</string>
    <string name="titulo_prueba_transformador_corriente">Prueba Transfomador Corriente</string>
    <string name="titulo_prueba_transformador_potencia">Prueba Transformador Potencia</string>
    <string name="titulo_retirar_medidor_mayuscula">RETIRAR MEDIDOR</string>
    <string name="titulo_retirar_elemento_mayuscula">RETIRAR ELEMENTO</string>
    <string name="titulo_retirar_tc">RETIRAR TC</string>
    <string name="titulo_retirar_tp">RETIRAR TP</string>
    <string name="titulo_rw">rW</string>
    <string name="titulo_potencia_activa">Potencia Activa</string>
    <string name="titulo_potencia_reactiva">Potencia Reactiva</string>
    <string name="titulo_potencia_aparente">Potencia Aparente</string>
    <string name="titulo_kvar">kVAr</string>
    <string name="titulo_kva">kVA</string>
    <string name="titulo_porcentaje_error">% de Error</string>
    <string name="titulo_porcentaje">Porcentaje %</string>
    <string name="titulo_factor_potencia">Factor Potencia</string>
    <string name="mensaje_no_tiene_ninguna_orden_activa">No tiene ninguna orden activa</string>
    <string name="mensaje_ya_existe_numero_orden_trabajo">Ya existe el número de la orden</string>
    <string name="mensaje_campo_codigo_requerido">el campo código es requerido</string>
    <string name="mensaje_campo_numero_orden_requerido">el campo número orden trabajo es requerido</string>
    <string name="mensaje_debe_seleccionar_tarea">debe seleccionar una tarea</string>
    <string name="titulo_descripcion">Descripción</string>
    <string name="titulo_version">Versión:</string>
    <string name="titulo_fecha_param2d_con_dos_puntos">Fecha:</string>
    <string name="titulo_vencimiento_con_dos_puntos">Vencimiento:</string>
    <string name="titulo_ruta_servidor_mayuscula">SIRIUS SERVER</string>
    <string name="alerta_parametrizacion_2D"> ESCANEAR código 2D.</string>
    <string name="titulo_cancelar_mayuscula">CANCELAR</string>
</resources>