<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:id="@+id/ContenedorPrincipal">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="270dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/titulo_informacion_orden_trabajo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingBottom="15dp"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/titulo_numero_orden"
        android:id="@+id/tvTituloNumeroOrdenTrabajo" />

    <TextView
        style="@style/EstiloTextoContenido"
        android:id="@+id/tvOrdenTrabajo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/titulo_nombre"
        android:id="@+id/tvTituloNombre" />

    <TextView
        style="@style/EstiloTextoContenido"
        android:id="@+id/tvNombre" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/titulo_direccion"
        android:id="@+id/tvTituloDireccion" />

    <TextView
        style="@style/EstiloTextoContenido"
        android:id="@+id/tvDireccion" />

    <View
        style="@style/Separator"
        android:layout_width="fill_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:gravity="right"
        android:orientation="horizontal"
        android:id="@+id/rlContenedorOpciones"
        android:weightSum="1">

        <Button
            android:id="@+id/btnCerrar"
            style="@style/EstiloBotones"
            android:text="@string/titulo_cerrar_mayuscula"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>